samples/_failures_safe/1761444702_ca6c7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2f29dd7.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_b2f29dd7.c:137:17: error: expected identifier or ‘(’ at end of input
  137 |                 long long
      |                 ^~~~
./samples/SAFE/__tmp_b2f29dd7.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2f29dd7.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2f29dd7.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2f29dd7.c:137:17: error: expected declaration or statement at end of input
